--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   "dependencies": {
     "express": "^4.19.2",
     "telegraf": "^4.16.3",
-    "googleapis": "^137.1.0"
+    "googleapis": "^137.1.0",
+    "google-auth-library": "^9.0.0",
+    "node-schedule": "^2.1.1"
   },
   "scripts": {
     "start": "node index.js"
   }
 }
+
